# telebot

./: .env.example  Cargo.toml  README.md
assets/: dictionary.txt  words.txt
src/: main.rs
